# models/auth.go
@@ -6,6 +6,8 @@ type UserLoginRequest struct {
 }
 
 type UserLoginResponse struct {
+	PhoneNumber  string `json:"phone_number"`
+	ID           string `json:"id"`
 	AccessToken  string `json:"access_token"`
 	RefreshToken string `json:"refresh_token"`
 }
@@ -17,6 +19,15 @@ type AuthInfo struct {
 
 type UserRegisterRequest struct {
 	MobilePhone string `json:"mobile_phone"`
+}
+
+type UserLoginByPhoneRequest struct {
+	PhoneNumber string `json:"phone_number"`
+}
+
+type UserLoginByPhoneConfirmRequest struct {
+	PhoneNumber string `json:"phone_number"`
+	OtpCode     string `json:"otp_code"`
 }
 
 type UserRegisterConfRequest struct {
